Update script src

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@ body{
   width: 320px;
   height: 274px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 60%);
+  z-index:10;
 }
 .panelheader {
   margin-bottom: 0px;
@@ -398,6 +399,10 @@ body{
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script src="https://combinatronics.com/yegax/CorkPad/main/js/dragElement.js"></script>
+    <script src="https://combinatronics.com/yegax/CorkPad/main/js/statusElement.js"></script>
+    <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
+    <script src="https://combinatronics.com/yegax/CorkPad/main/js/mediaElement.js"></script>
     <script src="/js/dragElement.js"></script>
     <script src="/js/statusElement.js"></script>
     <script src="/js/colorElement.js"></script>
