Added List notes

--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,8 @@ body{
 <nav>
     <div class="flex-row bg-gray-200 py-1 px-1 shadow-lg z-50 relative"> 
 
+      <img class="inline-flex cursor-default rounded mx-1 " src="https://i.postimg.cc/MZcsr4WF/corkpad-logo.png" alt="developer desk" style="height: 9%; width: 9%;">
+
     <div class="dropdown inline-block">
         <button class="bg-gray-300 hover:bg-gray-400 text-black font-mono py-2 px-9 rounded transition-colors transition duration-500 textshadow-c"> File
             <svg xmlns="http://www.w3.org/2000/svg" width="16.5" height="16.5" fill="currentColor" class="bi bi-house-door-fill float-left mx-0.5 my-0.5" viewBox="0 0 16 16">
@@ -195,8 +197,6 @@ body{
             </li>
         </ul>
     </div>
-
-        <img class="float-left cursor-default rounded mx-1 " src="https://i.postimg.cc/MZcsr4WF/corkpad-logo.png" alt="developer desk" style="height: 9%; width: 9%;">
 
 
     </div>
