--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,29 @@ body{
                 </a>
                 <p class="font-bold "> Note 2 </p>
             </div>
-            <textarea id="sticky13" class="bg-yellow-note resize-none" rows="10" cols="32"> </textarea>
+            <div class="block">
+                <span class="text-gray-700">Checkboxes</span>
+                <div class="mt-2">
+                  <div>
+                    <label class="inline-flex items-center">
+                      <input type="checkbox" class="form-checkbox" checked />
+                      <span class="ml-2">Option 1</span>
+                    </label>
+                  </div>
+                  <div>
+                    <label class="inline-flex items-center">
+                      <input type="checkbox" class="form-checkbox" />
+                      <span class="ml-2">Option 2</span>
+                    </label>
+                  </div>
+                  <div>
+                    <label class="inline-flex items-center">
+                      <input type="checkbox" class="form-checkbox" />
+                      <span class="ml-2">Option 3</span>
+                    </label>
+                  </div>
+                </div>
+              </div>
         </div>
     </section>
 
