Update BG Options

--- a/public/index.html
+++ b/public/index.html
@@ -99,11 +99,11 @@
                         <li class=""> <buton id="cork-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Cork</button> </li> 
                         <li class=""> <buton id="wood-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Wood</button> </li>
                         <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Metal</button> </li>
-                        <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">WoodGrain</button> </li>
-                        <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Tiles</button> </li>    
-                        <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Brick</button> </li>
-                        <li class=""> <buton id="metal-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Grass</button> </li>
-                        <li class=""> <buton id="metal-bg" type="button" class="rounded-b bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">ChipBoard</button> </li>   
+                        <li class=""> <buton id="woodgrain-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">WoodGrain</button> </li>
+                        <li class=""> <buton id="tiles-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Tiles</button> </li>    
+                        <li class=""> <buton id="brick-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Brick</button> </li>
+                        <li class=""> <buton id="grass-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">Grass</button> </li>
+                        <li class=""> <buton id="chipboard-bg" type="button" class="rounded-b bg-gray-200 hover:bg-gray-300 py-2 px-6 block whitespace-no-wrap">ChipBoard</button> </li>   
                     </ul>
                 </li>
  
@@ -1048,7 +1048,7 @@
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/helpscreen.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script> 
-    
+
 <!--
     <script src="/js/counterElement.js"></script>
     <script src="/js/colorElement.js"></script>
