--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <title>CorkPad</title>
 <meta name="description" content="CorkPad">
 <meta name="keywords" content="CorkPad Note Processing Desktop Enviroment">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style-b.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/custom-forms@0.2.1/dist/custom-forms.css">
@@ -13,6 +14,9 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 </style>
 
 <body id="printDiv" class="flex flex-col">   
@@ -22,7 +26,7 @@
 <nav>
     <div id="navbar-base" class="flex-row bg-gray-main py-1 px-1 shadow-lg z-50 relative"> 
 
-        <button class="text-black font-mono py-0 px-2 mr-28 "> 
+        <button class="text-black py-0 px-2 mr-28 "> 
             <a class="icon-font icon-shadow flex icon-fade rounded cursor-default">CorkPad</a>
         </button>
     
@@ -116,9 +120,9 @@
                     </svg>                     
                 </a> 
                 <ul class="dropdown-content absolute hidden text-gray-700 pl-95 ml-24 -mt-10 cursor-pointer">
-                    <li class=""> <buton id="cork-bg" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Serif</button> </li> 
-                    <li class=""> <buton id="wood-bg" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Monospace</button> </li>
-                    <li class=""> <buton id="metal-bg" type="button" class="rounded-b bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Handwriten</button> </li>
+                    <li class=""> <buton id="arial-btn" type="button" class="rounded-tr bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Arial</button> </li> 
+                    <li class=""> <buton id="monospace-btn" type="button" class="bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Monospace</button> </li>
+                    <li class=""> <buton id="handwritten-btn" type="button" class="rounded-b bg-gray-200 hover:bg-gray-300 py-2 px-7 block whitespace-no-wrap">Handwriten</button> </li>
                 </ul>
             </li>
         </ul>
@@ -275,6 +279,7 @@
     </div>
 </nav>
 
+    <!-- Help Pop-Up Screen -->
     <header>
       <div class="hidden help-container bg-gray-main flex-auto mx-auto relative" id="helpscreen">
         <div id="help-header-theme" class="help-container-header bg-gray-second">
@@ -303,7 +308,7 @@
                 <div class="shadow"></div>
                 <div class="shadow-two"></div>
             </div>
-            <p class="text-3xl opacity-50 font-light">Note Processing Desktop Enviroment</p>
+            <p class="text-3xl opacity-50 font-light">Note Processing Desktop Environment</p>
             <div id="help-separator-line-l" class="separator-line-l"> </div>
             <div id="help-separator-line-d" class="separator-line-d"> </div>
             <ul class="text-3xl opacity-60 mt-5">CorkPad allows you to:</ul> 
@@ -338,9 +343,9 @@
                     <path d="M6.192 2.78c-.458-.677-.927-1.248-1.35-1.643a2.972 2.972 0 0 0-.71-.515c-.217-.104-.56-.205-.882-.02-.367.213-.427.63-.43.896-.003.304.064.664.173 1.044.196.687.556 1.528 1.035 2.402L.752 8.22c-.277.277-.269.656-.218.918.055.283.187.593.36.903.348.627.92 1.361 1.626 2.068.707.707 1.441 1.278 2.068 1.626.31.173.62.305.903.36.262.05.64.059.918-.218l5.615-5.615c.118.257.092.512.05.939-.03.292-.068.665-.073 1.176v.123h.003a1 1 0 0 0 1.993 0H14v-.057a1.01 1.01 0 0 0-.004-.117c-.055-1.25-.7-2.738-1.86-3.494a4.322 4.322 0 0 0-.211-.434c-.349-.626-.92-1.36-1.627-2.067-.707-.707-1.441-1.279-2.068-1.627-.31-.172-.62-.304-.903-.36-.262-.05-.64-.058-.918.219l-.217.216zM4.16 1.867c.381.356.844.922 1.311 1.632l-.704.705c-.382-.727-.66-1.402-.813-1.938a3.283 3.283 0 0 1-.131-.673c.091.061.204.15.337.274zm.394 3.965c.54.852 1.107 1.567 1.607 2.033a.5.5 0 1 0 .682-.732c-.453-.422-1.017-1.136-1.564-2.027l1.088-1.088c.054.12.115.243.183.365.349.627.92 1.361 1.627 2.068.706.707 1.44 1.278 2.068 1.626.122.068.244.13.365.183l-4.861 4.862a.571.571 0 0 1-.068-.01c-.137-.027-.342-.104-.608-.252-.524-.292-1.186-.8-1.846-1.46-.66-.66-1.168-1.32-1.46-1.846-.147-.265-.225-.47-.251-.607a.573.573 0 0 1-.01-.068l3.048-3.047zm2.87-1.935a2.44 2.44 0 0 1-.241-.561c.135.033.324.11.562.241.524.292 1.186.8 1.846 1.46.45.45.83.901 1.118 1.31a3.497 3.497 0 0 0-1.066.091 11.27 11.27 0 0 1-.76-.694c-.66-.66-1.167-1.322-1.458-1.847z"/>
                     </svg>
                 </a>
-                <p class="font-bold "> Note 1 </p>
+                <p class="font-bold"> Note 1 </p>
             </div>
-            <textarea class="bg-clear resize-none" rows="10" cols="32"> </textarea>
+            <textarea class="bg-clear res resize-none" rows="10" cols="32"> </textarea>
         </div>
     </section>
 
@@ -1039,7 +1044,7 @@
     </script>   
 
 
-
+<!--
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/dragElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/statusElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
@@ -1047,9 +1052,10 @@
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/bgElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/helpscreen.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme.js"></script>
-    <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script> 
+    <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script>
+    <script src="https://combinatronics.com/yegax/CorkPad/main/js/fontElement.js"></script> 
+-->
 
-<!--
     <script src="/js/counterElement.js"></script>
     <script src="/js/colorElement.js"></script>
     <script src="/js/dragElement.js"></script>
@@ -1058,7 +1064,8 @@
     <script src="/js/helpscreen.js"></script>   
     <script src="/js/theme.js"></script>  
     <script src="/js/theme-bright.js"></script>  
--->
+    <script src="/js/fontElement.js"></script>  
+
 </body>
 
 
