--- a/public/index.html
+++ b/public/index.html
@@ -311,15 +311,15 @@
             <p class="text-3xl opacity-50 font-light">Note Processing Desktop Environment</p>
             <div id="help-separator-line-l" class="separator-line-l"> </div>
             <div id="help-separator-line-d" class="separator-line-d"> </div>
-            <ul class="text-3xl opacity-60 mt-5">CorkPad allows you to:</ul> 
-            <li class="text-2xl px-6 opacity-60"> Filters: Allows you to apply predefined. </li>
-            <li class="text-2xl px-6 opacity-60"> Viewport: Camera source display.</li> 
-            <li class="text-2xl px-6 opacity-60"> Capture: Settings for photo capturing and exporting, capturing settings such as: flash, timer, timelapse, etc. </li>
-            <p class="font-normal text-2xl opacity-60"> *(Note: webkitfilters are currently not supported for capture exports.) </p>
+            <ul class="mt-3 text-2xl opacity-50 font-light">CorkPad allows you to:</ul> 
+            <p class="text-2xl opacity-50 font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do ei usmod tempor incididunt sed do eiusmod tempor incididunt sed do eiusmod tempor incididunt. </p>
+            <li class="text-2xl opacity-50 font-light"> Filters: Allows you to apply predefined. </li>
+            <li class="text-2xl opacity-50 font-light"> Viewport: Camera source display.</li> 
+            <li class="text-2xl opacity-50 font-light"> Capture: Settings for photo capturing. </li>
             <ul></ul>
           </div>
-          <div class="flex-col help-scene">
-            <img src="https://i.postimg.cc/7hJpmsqK/Rest-place-1.png" class="" alt="developer desk" style="height: 100%; width: 100%;">
+          <div class="flex-col flex-shrink-0 help-scene">
+            <img src="https://i.postimg.cc/7hJpmsqK/Rest-place-1.png" class="" alt="developer desk" style="height: 100%; width: 55%;">
           </div>
         </div>
       </div>
@@ -1045,6 +1045,7 @@
 
 
 
+<!--
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/dragElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/statusElement.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
@@ -1055,7 +1056,7 @@
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/theme-bright.js"></script>
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/fontElement.js"></script> 
 
-<!--
+-->
     <script src="/js/counterElement.js"></script>
     <script src="/js/colorElement.js"></script>
     <script src="/js/dragElement.js"></script>
@@ -1065,7 +1066,7 @@
     <script src="/js/theme.js"></script>  
     <script src="/js/theme-bright.js"></script>  
     <script src="/js/fontElement.js"></script>  
--->
+
 
 </body>
 
