--- a/public/index.html
+++ b/public/index.html
@@ -315,7 +315,6 @@
             <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm3.496 6.033a.237.237 0 0 1-.24-.247C5.35 4.091 6.737 3.5 8.005 3.5c1.396 0 2.672.73 2.672 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.105a.25.25 0 0 1-.25.25h-.81a.25.25 0 0 1-.25-.246l-.004-.217c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.803 0-1.253.478-1.342 1.134-.018.137-.128.25-.266.25h-.825zm2.325 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z"/>
           </svg>
           <h1 class="py-0.5 px-7 cursor-default"> Help </h1>
-          <div class="help-scene-light"></div>
         </div>
         <div id="helpscreen-txt" class="cursor-default flex flex-row px-1 py-3">
           <div class="flex-col">
@@ -342,7 +341,7 @@
             <ul></ul>
           </div>
           <div class="flex-col flex-shrink-0 help-scene">
-            <img src="https://i.postimg.cc/7hJpmsqK/Rest-place-1.png" class="" alt="developer desk" style="height: 100%; width: 55%;">
+            <img src="https://i.postimg.cc/VN3TngSb/postit-bg-img.png" class="" alt="developer desk" style="height: 100%; width: 62%; opacity: 80%;">
           </div>
         </div>
       </div>
